// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<PostCommentForm
  onChange={[Function]}
  onSubmit={[Function]}
/>
`;

exports[`renders with initialValues 1`] = `
<PostCommentForm
  initialValues={
    Object {
      "body": "Hello World!",
    }
  }
  onChange={[Function]}
  onSubmit={[Function]}
/>
`;
